crates/lang/macro/tests/ui/blake2b/fail/invalid_parameter_type_02.rs
use ink_lang as ink;

const _: [u8; 32] = ink::blake2x256!(42);

fn main() {}
