crates/lang/macro/tests/ui/blake2b/fail/invalid_parameter_type_02.stderr
error: expected string or byte string literal as input. found Int(LitInt { token: 42 })
 --> $DIR/invalid_parameter_type_02.rs:3:38
  |
3 | const _: [u8; 32] = ink::blake2x256!(42);
  |                                      ^^
